--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -1,7 +1,9 @@
-body,html{
+body, html {
     height: 100%;
     margin: 0;
     border: 0;
+    background-color: #181a1b;
+    color: white;
 }
 
 textarea, input {
