--- a/static/html/fs/main-phone.css
+++ b/static/html/fs/main-phone.css
@@ -2,20 +2,11 @@
     --preview-width: 90px;
 }
 
-html, body {
-    margin: 0;
-    height: 100%;
-}
-body {
-    background-color: #181a1b;
-    color: white;
-}
-
 .folder, .funcBtn { text-decoration: underline; }
 
 .folder, .funcBtn, .file {
     cursor: pointer;
-    padding: 1vw 0;
+    padding: 10px 0;
 }
 
 .folder:hover, .funcBtn:hover, .file:hover {
@@ -27,8 +18,8 @@ body {
 .folder { color: #e3ff00; }
 
 .upload {
-    margin: 0 0 0 50px;
-    border-width: 0.3vh;
+    margin: 0 0 0 20px;
+    border-width: 8px;
 }
 .folder, .file, .funcBtn, .upload {
     font-size: 36px;
@@ -64,7 +55,10 @@ table {
     table-layout: fixed;
     width: 100%;
 }
-table td:nth-of-type(1) {text-align: left; padding-left: 5px;}
+table td:nth-of-type(1) {
+    text-align: left; 
+    padding-left: 5px;
+}
 
 .preview {
     max-height: calc(var(--preview-width) * 2);
