--- a/static/html/fs/main.css
+++ b/static/html/fs/main.css
@@ -20,8 +20,12 @@
 
 .folder { color: #e3ff00; }
 
+.path {
+    margin: 0 5px 0 0;
+}
+
 .upload {
-    margin: 0 0 0 10px;
+    margin: 0 10px 0 0;
     border-width: 4px;
 }
 
@@ -56,6 +60,19 @@
     width: 100%;
 }
 #main td:nth-of-type(1) {text-align: left; padding-left: 5px;}
+
+.name-btn {
+    /* background-color: #959090; */
+    padding: 2px 6px;
+    border-radius: 6px;
+    font-size: 13px;
+    cursor: pointer;
+    user-select: none;
+}
+
+.name-btn-sel {
+    background: #4a4949;
+}
 
 .preview {
     max-height: calc(var(--preview-width) * 2);
