--- a/static/html/fs/main.css
+++ b/static/html/fs/main.css
@@ -127,11 +127,10 @@ mrun {
     height: 20px;
     background-color: green;
     border-radius: 5px;
-    line-height: 15px;
+    line-height: 100%;
     text-align: center;
     cursor: pointer;
-    font-family: RainbowParty;
-    font-size: 26px;
+    font-size: 18px;
 }
 
 .close:hover {
