--- a/static/fs/main.css
+++ b/static/fs/main.css
@@ -100,13 +100,18 @@
     right: 0;
     margin: auto;
     max-width: 90%;
-    padding: 23px 20px 10px 20px;
+    padding: 10px 20px 0px 0px;
     width: fit-content;
     box-sizing: border-box;
 }
 
 .msgBoxLine {
-    margin: 8px 0 0 0;
+    margin: 6px 0 0 0;
+    word-wrap: break-word;
+    background-color: #2b2b2b82;
+    padding: 2px 6px;
+    width: fit-content;
+    border-radius: 3px;
 }
 
 mok {
