--- a/static/fs/main.css
+++ b/static/fs/main.css
@@ -95,13 +95,17 @@
     border-radius: 5px;
     position: fixed;
     z-index: 999;
-    top: 5%;
+    top: 0;
+    bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
     max-width: 90%;
-    padding: 10px 20px 0px 0px;
+    max-height: 90%;
+    overflow: auto;
+    padding: 10px 10px 0px 0px;
     width: fit-content;
+    height: fit-content;
     box-sizing: border-box;
 }
 
@@ -125,8 +129,8 @@ mrun {
 }
 
 .close {
-    position: absolute;
-    right: 2px;
+    position: sticky;
+    float: right;
     top: 2px;
     width: 20px;
     height: 20px;
